# aid

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE-APACHE  LICENSE-MIT  README.md
cmake/: aidConfig.cmake.in  catch.cmake  doxygen.cmake
include/aid/: aid.hpp
include/aid/core/: core.hpp  result.hpp
include/aid/mpsc/: channel.hpp  channel_type.hpp  mpsc.hpp  mpsc_error.hpp  mpsc_queue.hpp  receiver.hpp  sender.hpp
tests/: CMakeLists.txt
tests/src/: main_test.cpp  result.cpp
